--- a/hp_gorchels_test.Rmd
+++ b/hp_gorchels_test.Rmd
@@ -18,3 +18,20 @@ hp_data = read_csv("harry_potter_aggression_full.csv")
 ```
 
 I'm in lab week 6!
+
+2. Basic wrangling and make a graph of Harry Potter and Draco Malfoy aggression rates
+
+```{r}
+hp_graph = hp_data %>% 
+  filter(Name == "Harry" | Name == "Draco Malfoy") %>% 
+  select(Name, book, agg.per.mention) %>% 
+  ggplot(aes(x = book, y = agg.per.mention))+
+  geom_col(aes(fill = Name), position = "dodge")+ #default is stacked column graph, need to give it fill = Name to get it different. position = "dodge" makes it a cluster
+  theme_classic()+
+  scale_fill_grey()+
+  coord_flip()
+
+
+hp_graph
+```
+
